# todoAPI

./: .gitignore  README.md  main.py  open-api.yaml  pyproject.toml  requirements.txt
app_core/: database_core.py
app_services/: config.py  database_functions.py  database_tables.py  schemes.py  security.py
frontend/frontgpt-v1/: auth.html  styles.css  tasks.html  tasks.js
frontend/frontgpt-v2/: auth.html  styles.css  tasks.html  tasks.js
routers/: sign_router.py  system_router.py
src/: main.py
src/app_core/: database_core.py
src/app_services/: config.py  database_functions.py  database_tables.py  schemes.py  security.py
src/core/: config.py  database_core.py  schemes.py
src/core/database/: functions.py  helper.py  tables.py
src/routers/: sign_router.py  system_router.py  task_router.py
src/services/: config.py  database_functions.py  database_tables.py  schemes.py  security.py
src/test_app/: test_api.py
src/utils/: camel_case_converter.py
test_app/test_api/: test_1_sign_up.py  test_2_sign_in.py
