[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic = { extras = ["email"], version = "^2.10.6" }
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.38"
authx = "^1.4.1"
asyncpg = "^0.30.0"
pytest = "^8.3.5"
httpx = "^0.28.1"
loguru = "^0.7.3"
